# primorial_of_a_number

./: Cargo.toml  README.md  linux_primorial_of_a_number
src/: lib.rs  main.rs  t.rs
