[package]
name = "primorial_of_a_number"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true


[dependencies]
crossterm = "0.26.1"
num-bigint = "0.4.3"
tui = "0.19.0"
unicode-width = "0.1.7"